<resources>
    <string name="app_name">Data Logger</string>
    <string name="action_safe_units">Safe units</string>
    <string name="action_restore_units">Restore units</string>
    <string name="about">About</string>
    <string name="version">App-Version:</string>
    <string name="developers">Entwickler:</string>
    <string name="initator">Auftraggeber:</string>
    <string name="initiant">ZHAW Zürich</string>
    <string name="developer1">Haller Stefan</string>
    <string name="developer2">Michael Thal</string>
    <string name="developer3">Matthias Gasser</string>
    <string name="reason1">M.Bachmann</string>
    <string name="reason2">(CAS OOP)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="unit_list_fragment_label">Units</string>
    <string name="about_fragment_label">About</string>
    <string name="chart_fragment_label">Chart</string>
    <string name="add_unit_fragment_label">Add Unit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="ip_address">IP Adresse</string>
    <string name="Add">Hinzufügen</string>
    <string name="show_trend">Trendview</string>
    <string name="connect_button">Verbinden</string>
    <string name="command1_button">1</string>
    <string name="command2_button">2</string>
    <string name="command3_button">3</string>
    <string name="remove_unit">Entfernen</string>
    <string name="unit_name">Unitname:</string>
    <string name="unit_type">Unit Typ:</string>
    <string name="trendview">Trendview</string>
    <string name="disconnect_button">Trennen</string>
    <string name="separator">Separator</string>

    <string-array name="units_array">
        <item>Arduino</item>
        <item>Raspberry Pi</item>
    </string-array>

    <string-array name="units_interface">
        <item>Wireless</item>
    </string-array>
</resources>