<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUnitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="589dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:editable="true"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingHorizontal="13dp"/>

        <EditText
            android:id="@+id/editTextIpAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:editable="true"
            android:ems="10"
            android:hint="@string/ip_address"
            android:inputType="number|text"
            android:paddingHorizontal="13dp"/>

        <Spinner
            android:id="@+id/dropdown_unit_type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:spinnerMode="dropdown"
            android:layout_marginHorizontal="5dp"/>

        <Spinner
            android:id="@+id/dropdown_interface_type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:spinnerMode="dropdown"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/Add"
            android:textColor="@color/secondaryTextColor" />

    </LinearLayout>
</FrameLayout>